dependencies/kyverno/policy-base/.chainsaw-test/imagepullpolicy/enterprise/resources/pod-enterprise-mutated.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: enterprise-pod
  labels:
    tekton.dev/task: verify-enterprise-contract
spec:
  containers:
  - image: bash
    name: enterprise-pod-1
    imagePullPolicy: IfNotPresent
  - image: bash
    name: enterprise-pod-2
    imagePullPolicy: IfNotPresent
