dependencies/kyverno/policy-base/.chainsaw-test/imagepullpolicy/enterprise/chainsaw-test.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: imagepullpolicy-set-on-pod-enterprise
spec:
  description: |
    pod with suffix and enterprise label is mutated
  concurrent: false
  namespace: 'matching-pod-imagepullpolicy-enterprise'
  steps:
  - name: given-kyverno-has-permission-on-resources
    try:
    - apply:
        file: ../../../../kyverno-rbac.yaml
  - name: given-cluster-policy-is-ready
    try:
    - apply:
        file: ../../../reduce-tekton-pr-taskrun-resource-requests.yaml
    - assert:
        file: ../../chainsaw-assert-clusterpolicy.yaml
  - name: when-pod-is-created
    try:
    - apply:
        file: resources/pod-enterprise-to-mutate.yaml
  - name: then-pod-is-mutated
    try:
    - assert:
        file: resources/pod-enterprise-mutated.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: imagepullpolicy-not-set-on-pod-enterprise-with-no-suffix
spec:
  description: |
    pod with enterprise label but no suffix is not mutated
  concurrent: false
  namespace: 'not-matching-pod-imagepullpolicy-enterprise-no-suffix'
  steps:
  - name: given-kyverno-has-permission-on-resources
    try:
    - apply:
        file: ../../../../kyverno-rbac.yaml
  - name: given-cluster-policy-is-ready
    try:
    - apply:
        file: ../../../reduce-tekton-pr-taskrun-resource-requests.yaml
    - assert:
        file: ../../chainsaw-assert-clusterpolicy.yaml
  - name: when-pod-is-created
    try:
    - apply:
        file: ./resources/pod-enterprise-no-suffix.yaml
  - name: then-pod-is-not-mutated
    try:
    - assert:
        file: ./resources/pod-enterprise-no-suffix.yaml
